force-app/main/default/objects/Annual_Review__c/Annual_Review__c.object-meta.xml
<CustomObject>
    <label>Annual Review</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Annual Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>