force-app/main/default/objects/Annual_Review__c/fields/Adoption_Case__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Annual Review</relationshipLabel>
    <relationshipName>Annual_Review</relationshipName>
    <type>Lookup</type>
</CustomField>