force-app/main/default/objects/Annual_Review__c/fields/Annual_Review_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Approval_Status__c</fullName>
    <label>Annual Review Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>