force-app/main/default/objects/Annual_Review__c/fields/Child_currently_resides_with_guardian__c.field-meta.xml
<CustomField>
    <fullName>Child_currently_resides_with_guardian__c</fullName>
    <label>Child currently resides with guardian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>