force-app/main/default/objects/Annual_Review__c/fields/Child_is_currently_attending_school__c.field-meta.xml
<CustomField>
    <fullName>Child_is_currently_attending_school__c</fullName>
    <label>Child is currently attending school</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>