force-app/main/default/objects/Annual_Review__c/fields/Child_is_participating_in_a_program__c.field-meta.xml
<CustomField>
    <fullName>Child_is_participating_in_a_program__c</fullName>
    <label>Child is participating in a program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>