force-app/main/default/objects/Annual_Review__c/fields/Child_is_under_18_Years_old_or_Child_is__c.field-meta.xml
<CustomField>
    <fullName>Child_is_under_18_Years_old_or_Child_is__c</fullName>
    <inlineHelpText>Child is under 18 Years old or Child is under 21 Years old with disability?</inlineHelpText>
    <label>Child is under 18 Years old or Child is</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>