force-app/main/default/objects/Annual_Review__c/fields/Child_Still_meets_special_need__c.field-meta.xml
<CustomField>
    <fullName>Child_Still_meets_special_need__c</fullName>
    <label>Child Still meets special need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>