force-app/main/default/objects/Annual_Review__c/fields/Disability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disability_Notes__c</fullName>
    <label>Disability Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>