force-app/main/default/objects/Annual_Review__c/fields/Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Entered_By__c</fullName>
    <label>Entered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>