force-app/main/default/objects/Annual_Review__c/fields/Guardian_is_legally_responsible__c.field-meta.xml
<CustomField>
    <fullName>Guardian_is_legally_responsible__c</fullName>
    <label>Guardian is legally responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>