force-app/main/default/objects/Annual_Review__c/fields/Guardian_provides_financial_support__c.field-meta.xml
<CustomField>
    <fullName>Guardian_provides_financial_support__c</fullName>
    <label>Guardian provides financial support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>