force-app/main/default/objects/Annual_Review__c/fields/if_not_School_age_document_of_immurizati__c.field-meta.xml
<CustomField>
    <fullName>if_not_School_age_document_of_immurizati__c</fullName>
    <inlineHelpText>if not School age,document of immurization record Provide?</inlineHelpText>
    <label>if not School age,document of immurizati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>