force-app/main/default/objects/Annual_Review__c/fields/if_the_child_is_between_18_and_21_Years__c.field-meta.xml
<CustomField>
    <fullName>if_the_child_is_between_18_and_21_Years__c</fullName>
    <inlineHelpText>if the child is between 18 and 21 Years old, he/she in School,employed or disabled?</inlineHelpText>
    <label>if the child is between 18 and 21 Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>