force-app/main/default/objects/Annual_Review__c/fields/Is_the_requried_document__c.field-meta.xml
<CustomField>
    <fullName>Is_the_requried_document__c</fullName>
    <label>Is the requried document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>