force-app/main/default/objects/Annual_Review__c/fields/LDSS_Director_Designee__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Director_Designee__c</fullName>
    <label>LDSS Director/ Designee</label>
    <type>Date</type>
</CustomField>