force-app/main/default/objects/Annual_Review__c/fields/Parent_are_Still_legally_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Parent_are_Still_legally_Responsible__c</fullName>
    <label>Parent are Still legally Responsible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>