force-app/main/default/objects/Annual_Review__c/fields/Parent_Provide_financial_Support_for_the__c.field-meta.xml
<CustomField>
    <fullName>Parent_Provide_financial_Support_for_the__c</fullName>
    <inlineHelpText>Parent Provide financial Support for the child?</inlineHelpText>
    <label>Parent Provide financial Support for the</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>