force-app/main/default/objects/Annual_Review__c/fields/Primary_Caregiver_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Caregiver_Sign_Date__c</fullName>
    <label>Primary Caregiver Sign Date</label>
    <type>Date</type>
</CustomField>