force-app/main/default/objects/Annual_Review__c/fields/Provide_a_field_to_indicate__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_field_to_indicate__c</fullName>
    <label>Provide a field to indicate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>