force-app/main/default/objects/Annual_Review__c/fields/Renewal_agreement_has_been_signed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_agreement_has_been_signed__c</fullName>
    <label>Renewal agreement has been signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>