force-app/main/default/objects/Annual_Review__c/fields/Secondary_Caregiver_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Caregiver_Sign_Date__c</fullName>
    <label>Secondary Caregiver Sign Date</label>
    <type>Date</type>
</CustomField>