force-app/main/default/objects/Annual_Review__c/fields/Supervisor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Approval</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The user can remove the filter or enter values that don&apos;t match criteria</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Review</relationshipName>
    <type>Lookup</type>
</CustomField>