force-app/main/default/objects/Annual_Review__c/fields/Will_the_child_reach_18th_birthday__c.field-meta.xml
<CustomField>
    <fullName>Will_the_child_reach_18th_birthday__c</fullName>
    <label>Will the child reach 18th birthday</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>